--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,7 @@ trusted_len = []
 derive_utils = { version = "0.13" }
 proc-macro2 = "1.0.60"
 quote = "1.0.25"
-syn = { version = "2.0.6", features = ["full", "visit-mut"] }
+syn = { version = "2.0.6", features = ["full", "visit-mut", "extra-traits"] } # TODO: remove "extra-traits" (debug purpose)
 
 [dev-dependencies]
 macrotest = { git = "https://github.com/taiki-e/macrotest.git", branch = "dev" } # 2021 edition support + syn 2.0 + no cargo-expand + adjust overwrite behavior
